<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XCeP</string>
    <string name="facebook_app_id">1698851823679580</string>
    <string name="Username">Nome</string>
    <string name="Password">Contrasinal </string>
    <string name="RePassword">Volva introducir o contrasinal</string>
    <string name="Email">Enderezo electrónico</string>
    <string name="LoginBtn">Iniciar sesión</string>
    <string name="SignupBtn">Rexistrarse</string>
    <string name="LogoutBtn">Desconectarse</string>
    <string name="my_list">As miñas listas</string>
    <string name="action_settings">Configuracion</string>
	<string name="title_action_bar_login">Logueate</string>
    <string name="title_action_bar_signup">Rexistrate</string>
    <string name="products"> produtos</string>
    <string name="hint_name_list">Introduza o nome da lista</string>
    <string name="button_cancel_new_list">Cancelar</string>
    <string name="button_add_new_list">Crear</string>
    <string name="title_action_bar_add_shopping_list">Nova Lista</string>
    <string name="text_name_add_shopping_list">Nome da lista:</string>
    <string name="text_adapter_list_market">Supermercado encontrado</string>
    <string name="text_login_home_user">Has iniciado sesión como  </string>
    <string name="empty_list">Listas baleira</string>
    <string name="error_add_list">Erro o engadir a nova lista</string>
    <string name="conect_Ok">Conectado Exitosamente </string>
    <string name="conect_ko_login">As credenciais son inválidas, se non está auténticado no sistema, por favor rexistrese</string>
    <string name="pass_no_ok">As contrasinais non coinciden</string>
    <string name="conect_ko_signup">Rexistrado Exitosamente </string>
    <string name="email_fail">O seu enderezo electrónico é inválido</string>
    <string name="user_fail">O usuario que intenta rexistrar xa existe, Loguese!</string>
    <string name="email_exist">O email que intenta rexistrar xa existe</string>
    <string name="error_signup">Error no rexistro</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="catalog">Catálogo</string>
    <string name="catalog_total">Catálogo Xeral</string>
    <string name="scan">Escaner</string>
    <string name="scan_total">Escaner Xeral</string>
 	<string name="setting">Axustes</string>
 	<string name="facebook">Facebook</string>
 	<string name="twitter">Twitter</string>
 	<string name="sugerencias">Suxestións</string>
 	<string name="language">Idioma</string>
 	<string name="reset_bd">Reiniciar Datos</string>
 	<string name="help">Acerca de XCeP</string>
 	<string name="title_action_bar_add_market">Novo Supermercado</string>
 	<string name="title_action_bar_Shopping_car">Carriño da Compra</string>
 	<string name="title_action_bar_detail_product">Detalle do Produto</string>
 	<string name="title_action_bar_add_product">Novo Produto</string>
 	<string name="novo">Novo</string>
 	<string name="produto">" produto"</string>
 	<string name="produtos">" produtos"</string>
 	<string name="cero_produtos">0 produtos</string>
 	<string name="simbol_euro">" €"</string>
 	<string name="no_d_isponible">N.D.</string>
 	<string name="unidade">" Unidade"</string>
 	<string name="unidades">" Unidades"</string>
 	<string name="fora_limites">Iste argumento está fóra dos límites.</string>
 	<string name="engadir">Engadir</string>
 	<string name="cancelar">Cancelar</string>
 	<string name="setadapter_non_soportado_polo_multiselectspinner">setAdapter non está soportado polo MultiSelectSpinner .</string>
 	<string name="index">"Index "</string>
 	<string name="fora_campo">" está fóra de campo."</string>
 	<string name="erro">Erro</string>
 	<string name="publicouse_a_tua_mensaxe">Publicouse a tua mensaxe</string>
 	<string name="aceptar">Aceptar</string>
 	<string name="erro_en_permisos">Erro en permisos</string>
 	<string name="necesario_encher_o_campo_seleccionado">É necesario encher o campo seleccionado</string>
 	<string name="non_se_obtuvo_foto">Non se obtivo a fotografía</string>
 	<string name="adxuntar_foto">Adxuntar fotografía</string>
 	<string name="seleccione_onde_buscar_foto">Seleccione onde buscar a fotografía</string>
 	<string name="galery">Galería</string>
 	<string name="camara">Cámara</string>
 	<string name="cancelouse">Cancelouse</string>
 	<string name="cancelouse_foto">Cancelouse a fotografía</string>
 	<string name="erro_o_adxuntar_imaxen">Erro o adxuntar imaxen</string>
 	<string name="engadimos_o_supermercado_a_bd_">"Engadimos O supermercado a BD "</string>
 	<string name="erro_o_engadir_na_bd">"ERRO O ENGADIR NA BD "</string>
 	<string name="engadindo_produto_ao_sistema">Engadindo produto ao sistema</string>
 	<string name="erro_ao_gardar_prezo">Erro ao gardar prezo</string>
 	<string name="engadese_o_produto_o_supermercado">Engadese o produto o supermercado</string>
 	<string name="erro_ao_engadir_o_produto_ao_supermercado">Erro ao engadir o produto ao supermercado</string>
 	<string name="produto_engadido">Produto engadido</string>
 	<string name="engadimos_o_produto_a_bd">"Engadimos O produto a BD "</string>
 	<string name="non_seleccionou_super">Non seleccionou ningún supermercado</string>
 	<string name="engadimos_a_nova_lista">"Engadimos a nova lista "</string>
 	<string name="lista_da_compra">Lista da compra</string>
 	<string name="cambiar_unidades">"Cambiar unidades "</string>
 	<string name="que_desexa_facer">¿Que desexa facer?</string>
 	<string name="ver_detalle_do_produto">Ver detalle do Produto</string>
 	<string name="cambiando_unidades">Cambiando unidades</string>
 	<string name="seleccionouse">"Seleccionouse "</string>
 	<string name="seleccionouse_mesma_cantidade">Seleccionouse a mesma cantidade</string>
 	<string name="engadida_unha_unidade_de">"Engadida unha unidade de "</string>
 	<string name="total">". Total "</string>
 	<string name="engadindo_produto_novo_a_lista">Engadindo produto novo a lista</string>
 	<string name="engasese_a_unidade_a_lista">Engasese a unidade a lista</string>
 	<string name="eliminando_produto_da_lista">Eliminando produto da lista</string>
 	<string name="erro_ao_engadir_produto">Erro ao engadir produto</string>
 	<string name="erro_na_query_non_se_pode_recargar_a_lista">Erro na query, non se pode recargar a lista!!!</string>
 	<string name="eliminar_o_produto">Eliminar o Produto</string>
 	<string name="ningunha_etiqueta_seleccionado">Ningunha etiqueta seleccionado</string>
 	<string name="tag_en_filtro">"Tag en filtro: "</string>
 	<string name="non_se_pudo_acceder_camara">Non se pudo acceder a cámara</string>
 	<string name="recargando_catalogo_do_supermercado">"Recargando catálogo do supermercado "</string>
 	<string name="engadir_produto">Engadir produto</string>
 	<string name="pechar">Pechar</string>
 	<string name="buscando_produto_no_sistema">Buscando produto no sistema</string>
 	<string name="erro_ao_consultar_o_produto">Erro ao consultar o produto</string>
 	<string name="produto_atopado">Produto atopado</string>
 	<string name="atopouse_o_produto">"Atopouse o produto "</string>
 	<string name="para_o_supermercado">"para o supermercado "</string>
 	<string name="pero_non_consta_no_supermercado">"pero non consta no supermercado "</string>
 	<string name="produto_novo">Produto novo</string>
 	<string name="atopouse_o_produto_con_identificador">"Atopouse o produto  con identificador: "</string>
 	<string name="desexa_engadilo_o_sistema_para_o_supermercado">"Desexa engadilo o sistema para o supermercado? "</string>
 	<string name="engadir_prezo">Engadir prezo</string>
 	<string name="prezo">prezo</string>
 	<string name="a">" a "</string>
 	<string name="engadindo">"Engadindo "</string>
 	<string name="necesario_introducir_un_prezo_valido">Necesario introducir un prezo válido</string>
 	<string name="compartir">"Compartir "</string>
 	<string name="busqueda_por_palabras_clave">Búsqueda por palabras clave</string>
 	<string name="non_posee_ningunha_lista">Non posee ningunha lista</string>
 	<string name="ningunha_lista_compatible">Ningunha lista compatible. Cree unha lista primeiro dos seguintes supermercados:</string>
 	<string name="a_lista">" a lista"</string>
 	<string name="erro_ao_engadir_o_produto">Erro ao engadir o produto</string>
 	<string name="actualizando_produtos">Actualizando produtos</string>
 	<string name="erro_na_actualizacion_dos_produtos">Erro na actualización dos produtos</string>
 	<string name="produto_non_valido">Produto non válido</string>
 	<string name="erro_ao_gardar_a_lista">Erro ao gardar a lista</string>
 	<string name="engadiuse_o_novo_produto">Engadiuse o novo produto</string>
 	<string name="actualizando_listas">Actualizando listas</string>
 	<string name="erro_na_actualizacion_de_listas">Erro na actualización de listas</string>
 	<string name="modificacions_da_lista">Modificacións da lista</string>
 	<string name="eliminar_a_lista">Eliminar a lista</string>
 	<string name="eliminando_lista">Eliminando lista</string>
 	<string name="erro_no_borrado">Erro no borrado</string>
 	<string name="cambiar_nome">Cambiar Nome</string>
 	<string name="cambiar_o_nome_da_lista">"Cambiar o nome da lista "</string>
 	<string name="cambiando_nome">Cambiando nome</string>
 	<string name="produciuse_un_erro">"Produciuse un erro: "</string>
 	<string name="necesario_encher_o_campo_nome">É necesario encher o campo nome</string>
 	<string name="error_login">Error Login</string>
 	<string name="l">"   l   "</string>
 	<string name="code">"  código"</string>
 	<string name="cause">"causa "</string>
 	<string name="aplicacion_de_xestion_de_compra">Aplicación de xestión de compra</string>
 	<string name="funcionalidade_en_cosntruccion">Funcionalidade en cosntrucción</string>
 	<string name="informacion">Información</string>
 	<string name="informacion_sobre_a_aplicacion">Aplicación para a xestión de productos de supermercados, mediante listas.</string>
 	<string name="si">Si</string>
 	<string name="o_seu_enderezo_electronico_invalido">O seu enderezo electrónico é inválido</string>
 	<string name="o_usuario_que_intenta_rexistrar_xa_existe_loguese">O usuario que intenta rexistrar xa existe, Loguese!</string>
 	<string name="o_email_que_intenta_rexistrar_xa_existe">O email que intenta rexistrar xa existe</string>
 	<string name="erro_no_rexistro">Erro no rexistro</string>
 	<string name="categoria">"Categoría: "</string>
 	<string name="imagen_produto">Imagen produto</string>
 	<string name="descricion">"Descrición: "</string>
 	<string name="marca">"Marca: "</string>
 	<string name="novo_prezo_para_o_supermercado">"Novo Prezo  para o supermercado:  "</string>
 	<string name="novo_nome_da_lista">"Novo nome da lista : "</string>
 	<string name="modifica_as_unidades_do_produto">Modifica as unidades do produto</string>
 	<string name="supermercado_a_engadir">Supermercado a engadir</string>
 	<string name="nome_do_supermercado">Nome do Supermercado</string>
 	<string name="engadir_imaxe">Engadir Imaxe</string>
 	<string name="prezo_carrinho">"Prezo Carriño "</string>
 	<string name="cero_euros">0,0 €</string>
 	<string name="prezo_lista">Prezo Lista</string>
 	<string name="enfoque_o_codigo_de_barras_do_produto">Enfoque o código de barras do produto</string>
 	<string name="creando_lista">Creando lista da compra</string>
 	<string name="enviar_suxestion">Enviar suxestión</string>
</resources>