<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:id="@+id/detail_product_name"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textColor="@color/verde_oscuro"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageButtonShare1"
            android:layout_width="64dp"
            android:layout_height="51dp"
            android:src="@drawable/abc_ic_menu_share_holo_light" 
            android:contentDescription="@string/compartir"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/categoria"
            android:textColor="@color/verde_oscuro"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image_view_product"
            android:contentDescription="@string/imagen_produto"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:src="@drawable/abc_ic_clear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/descricion"
            android:textColor="@color/verde_oscuro"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_product_description"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/marca"
            android:textColor="@color/verde_oscuro"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_product_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listMarketPrice"
        android:layout_width="188dp"
        android:layout_height="112dp"
        android:layout_gravity="right"
        android:layout_weight="0.65" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/verde_oscuro"
            android:text="@string/pechar"
            materialdesign:animate="true" >
        </com.gc.materialdesign.views.ButtonRectangle>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/add_product_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/verde_oscuro"
            android:text="@string/engadir"
            materialdesign:animate="true" />
    </LinearLayout>

</LinearLayout>