<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp" >
                <TextView
                    android:id="@+id/idNameMarket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/supermercado_a_engadir"
                    android:textSize="25sp" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="41.29"
            android:gravity="center_vertical"
            android:text="@string/nome_do_supermercado" />

        <EditText
            android:id="@+id/text_name_market"
            style="@style/ParseLoginUI.EditText"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >
        
         <LinearLayout
             android:id="@+id/button_camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:background="@android:color/transparent"
             android:clickable="true"
             android:gravity="center"
             android:orientation="vertical" >

             <ImageView
                 android:id="@+id/image_view_market"
                 android:layout_width="50dp"
                 android:layout_height="0dp"
                 android:layout_weight="0.06"
                 android:src="@drawable/ic_add_photo" />
			
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_margin="5dp"
		        android:text="@string/engadir_imaxe" />
		</LinearLayout>

     </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/cancel_new_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/verde_oscuro"
            android:text="@string/cancelar"
            materialdesign:animate="true" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/add_new_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/verde_oscuro"
            android:text="@string/engadir"
            materialdesign:animate="true" >
        </com.gc.materialdesign.views.ButtonRectangle>
    </LinearLayout>

</LinearLayout>