<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.irina.xcep.SplashActivity" >

    <TextView
        android:id="@+id/titleApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/verde_oscuro"
        android:textSize="@dimen/text_size_titleApp"
        android:textStyle="italic|bold" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleApp"
        android:layout_below="@+id/titleApp"
        android:layout_marginTop="40dp"
        android:src="@drawable/cesta" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageLogo"
        android:layout_below="@+id/imageLogo"
        android:layout_marginTop="18dp"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp" >

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/verde_oscuro"
            android:text="@string/SignupBtn"
            materialdesign:animate="true" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/verde_oscuro"
            android:text="@string/LoginBtn"
            materialdesign:animate="true" />
    </LinearLayout>

</RelativeLayout>